<resources>
    <string name="app_name">UTrevia Navigation</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="africa_image">Africa image</string>
    <string name="africa">Africa</string>
    <string name="the_gold_continent">, The gold continent</string>
    <string name="intro_txt">Start navigating through African continent with navigation by android framework</string>
    <string name="let_start">Start</string>
    <string name="flower">Flower</string>
    <string name="africa_strength">Africa strength</string>
    <string name="question_one">What is one of the most important strength of africa continent?</string>
    <string name="animals_on_nature">Animals on nature</string>
    <string name="young_and_talented_people">Young and talented people</string>
    <string name="natural_resources">Natural resources</string>
    <string name="move_next">Next</string>
    <string name="trophy_image">Trophy image</string>
    <string name="puzzle_image">Puzzle image</string>
    <string name="play_again">Play again</string>
    <string name="win_congrat">You win!! \nCongratulation</string>
    <string name="you_lose">You lose !</string>
    <string name="adb">Android adb</string>
    <string name="about_txt">About this</string>
    <string name="about_msg">This is a gentle introduction to android navigation component, part Jetpack lib nothing more</string>
    <string name="abt">About</string>
</resources>
