<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <ImageView
            android:id="@+id/africaImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_africa"
            android:contentDescription="@string/africa_image"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAfrica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAfrica"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:text="@string/africa"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/the_gold_continent"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_txt"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"/>
        
        <Button
            android:id="@+id/startNavigate"
            android:layout_marginTop="@dimen/xtra_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_back"
            android:text="@string/let_start"/>

    </LinearLayout>
</layout>
