<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="com.utrevianavigation.AboutFragment">

        <ImageView
            android:id="@+id/adb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adb"
            android:src="@drawable/ic_adb"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_height="wrap_content"
            android:text="@string/about_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_msg"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textAlignment="center"/>


    </LinearLayout>
</layout>
