<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".GameLoseFragment">

        <ImageView
            android:id="@+id/puzzleImage"
            android:contentDescription="@string/puzzle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_puzzle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_lose"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/medium_margin"/>

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:background="@drawable/btn_back"
            android:textColor="@android:color/white"
            android:text="@string/play_again"/>
    </LinearLayout>
</layout>
